syntax = "proto3";

package quiz;

option go_package = "github.com/casnerano/snippet-war/pkg/api/v1/quiz;quiz";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service Quiz {
  rpc ListQuestions(ListQuestions.Request) returns (ListQuestions.Response) {
    option (google.api.http) = {
      get: "/v1/quiz/questions",
    };
  };
}

message ListQuestions {
  message Request {
    Language language = 1 [(validate.rules).enum = {not_in: [0]}, (validate.rules).enum.defined_only = true];
    repeated string topics = 2 [(validate.rules).repeated.min_items = 1];
    Difficulty difficulty = 3 [(validate.rules).enum = {not_in: [0]}, (validate.rules).enum.defined_only = true];
    uint32 limit = 4 [(validate.rules).uint32 = {gt: 0, lt: 10}];
  }

  message Response {
    repeated Question questions = 1;
  }
}

message Question {
  string id = 1;
  Language language = 2;
  string topic = 3;
  Difficulty difficulty = 4;
  Content content = 5;
  string explanation = 6;

  oneof Answer {
    MultipleChoiceAnswer multiple_choice = 7;
    FreeTextAnswer free_text = 8;
  }

  message Content {
    string text = 1;
    optional string code = 2;
  }

  message MultipleChoiceAnswer {
    repeated string options = 1;
    repeated string correct_options = 4;
  }

  message FreeTextAnswer {
    repeated string correct_answers = 1;
  }
}

enum Language {
  LANGUAGE_UNSPECIFIED = 0;
  LANGUAGE_PYTHON = 1;
  LANGUAGE_JAVASCRIPT = 2;
  LANGUAGE_GO = 3;
  LANGUAGE_JAVA = 4;
  LANGUAGE_CPP = 5;
  LANGUAGE_RUST = 6;
  LANGUAGE_TYPESCRIPT = 7;
}

enum Difficulty {
  DIFFICULTY_UNSPECIFIED = 0;
  DIFFICULTY_BEGINNER = 1;
  DIFFICULTY_INTERMEDIATE = 2;
  DIFFICULTY_ADVANCED = 3;
}